--- a/12A5.html
+++ b/12A5.html
@@ -20,7 +20,7 @@
         <div id="tkb" style="height:30px;background-color:black;font-size:20px;color:white;">
         Thời Khóa Biểu
         </div>
-      <div>
+      <div class="chonk">
         <img src="tkb.jpg" alt="">
       </div>
         <div class="parallax"></div>
